--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-bootstrap-modal",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "It is a library to make managment of bootstrap modal dialogs easier in Angular2",
   "main": "index.js",
   "scripts": {
@@ -23,16 +23,18 @@
     "url": "https://github.com/ankosoftware/ng2-bootstrap-modal/issues"
   },
   "homepage": "https://github.com/ankosoftware/ng2-bootstrap-modal#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@angular-devkit/core": "^12.1.2"
+  },
   "devDependencies": {
-    "@angular/common": "^2.4.9",
-    "@angular/core": "^2.4.9",
-    "rxjs": "^5.0.3",
-    "zone.js": "^0.7.6",
-    "@angular/compiler": "^2.4.9",
-    "@angular/compiler-cli": "^2.4.9",
-    "@angular/platform-browser": "^2.4.9",
-    "@angular/platform-server": "^2.4.9",
-    "typescript": "^2.2.1"
+    "@angular/common": "^12.1.2",
+    "@angular/core": "^12.1.2",
+    "rxjs": "^6.6.7",
+    "zone.js": "^0.11.4",
+    "@angular/compiler": "^12.1.2",
+    "@angular/compiler-cli": "^12.1.2",
+    "@angular/platform-browser": "^12.1.2",
+    "@angular/platform-server": "^12.1.2",
+    "typescript": "^4.3.5"
   }
 }
